--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "customize-cra": "^1.0.0",
+    "json-server": "^0.17.3",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
